--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
