--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-toast-notifications": "^3.4.0",
