--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.20",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
