--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "axios": "^1.7.9",
     "expo": "~52.0.20",
@@ -18,12 +19,14 @@
     "expo-splash-screen": "^0.29.18",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-navigation": "^5.0.0",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
